[package]
name = "vk-mem-vulkanalia"
version = "0.1.0+vk-mem-0.4.0"
authors = ["Marco Süß <msuess@mailbox.org>"]
description = "Rust ffi bindings and idiomatic wrapper for AMD Vulkan Memory Allocator (VMA) using vulkanalia instead of ash. Fork of vk-mem."
homepage = "https://github.com/msuess/vk-mem-vulkanalia"
repository = "https://github.com/msuess/vk-mem-vulkanalia"
documentation = "https://docs.rs/vk-mem-vulkanalia"
readme = "README.md"
keywords = ["vulkan", "vk", "vulkanalia", "memory", "allocator"]
categories = ["api-bindings", "rendering", "rendering::engine", "rendering::graphics-api", ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/VulkanMemoryAllocator/include/vk_mem_alloc.h",
    "vendor/Vulkan-Headers/include",
    "wrapper.cpp",
]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bitflags = "2.5"
vulkanalia = { version = "0.23.0", default-features = false }
vulkanalia-sys = { version = "0.23.0", default-features = false }

[dev-dependencies]
vulkanalia = { version = "0.23.0", features = ["libloading", "provisional"] }

[build-dependencies]
cc = "1.0"

[build-dependencies.bindgen]
version = "0.69"
optional = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
default = ["std"]
generate_bindings=["bindgen"]
libloading=["vulkanalia/libloading"]
recording=[]
std=["vulkanalia/std", "vulkanalia-sys/std"]
no_std_error=["vulkanalia/no_std_error", "vulkanalia-sys/no_std_error"]